--- a/Workspace_STM32CubeIDE/AD9833/AD9833.ioc
+++ b/Workspace_STM32CubeIDE/AD9833/AD9833.ioc
@@ -5,7 +5,7 @@ Mcu.CPN=STM32F401RET6
 Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=SPI2
+Mcu.IP2=SPI3
 Mcu.IP3=SYS
 Mcu.IP4=USART2
 Mcu.IPNb=5
@@ -13,19 +13,19 @@ Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB10
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
+Mcu.Pin10=PC10
+Mcu.Pin11=PC11
+Mcu.Pin12=PC12
 Mcu.Pin13=PB3
 Mcu.Pin14=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PC3
-Mcu.Pin6=PA0-WKUP
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA5
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA5
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
 Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -44,11 +44,6 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-PA0-WKUP.GPIOParameters=PinState,GPIO_Label
-PA0-WKUP.GPIO_Label=SPI2_CS
-PA0-WKUP.Locked=true
-PA0-WKUP.PinState=GPIO_PIN_SET
-PA0-WKUP.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -82,12 +77,18 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
-PB10.Mode=TX_Only_Simplex_Unidirect_Master
-PB10.Signal=SPI2_SCK
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PC10.Mode=TX_Only_Simplex_Unidirect_Master
+PC10.Signal=SPI3_SCK
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=SPI3_CS
+PC11.Locked=true
+PC11.Signal=GPIO_Output
+PC12.Mode=TX_Only_Simplex_Unidirect_Master
+PC12.Signal=SPI3_MOSI
 PC13-ANTI_TAMP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
 PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -100,8 +101,6 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC3.Mode=TX_Only_Simplex_Unidirect_Master
-PC3.Signal=SPI2_MOSI
 PH0\ -\ OSC_IN.Locked=true
 PH0\ -\ OSC_IN.Mode=HSE-External-Clock-Source
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
@@ -136,7 +135,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_SPI3_Init-SPI3-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -168,12 +167,12 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SPI2.CLKPolarity=SPI_POLARITY_HIGH
-SPI2.DataSize=SPI_DATASIZE_16BIT
-SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CLKPolarity,DataSize
-SPI2.Mode=SPI_MODE_MASTER
-SPI2.VirtualType=VM_MASTER
+SPI3.CLKPolarity=SPI_POLARITY_HIGH
+SPI3.DataSize=SPI_DATASIZE_16BIT
+SPI3.Direction=SPI_DIRECTION_2LINES
+SPI3.IPParameters=VirtualType,Mode,Direction,CLKPolarity,DataSize
+SPI3.Mode=SPI_MODE_MASTER
+SPI3.VirtualType=VM_MASTER
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
