Antes de cambiar nombre

--- a/Workspace_STM32CubeIDE/PruebaTFT/PruebaTFT.ioc
+++ b/Workspace_STM32CubeIDE/PruebaTFT/PruebaTFT.ioc
@@ -5,6 +5,9 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configTOTAL_HEAP_SIZE
 FREERTOS.Tasks01=hardwareTask,24,2000,StartHardwareTask,Default,NULL,Dynamic,NULL,NULL
