--- a/Workspace_STM32CubeIDE/AD9833/AD9833.ioc
+++ b/Workspace_STM32CubeIDE/AD9833/AD9833.ioc
@@ -1,4 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F401RET6
