--- a/Workspace_STM32CubeIDE/Bode_Analyzer/Bode_Analyzer.ioc
+++ b/Workspace_STM32CubeIDE/Bode_Analyzer/Bode_Analyzer.ioc
@@ -9,9 +9,8 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,configTOTAL_HEAP_SIZE
-FREERTOS.Tasks01=hardwareTask,24,2000,StartHardwareTask,Default,NULL,Dynamic,NULL,NULL
-FREERTOS.configTOTAL_HEAP_SIZE=9000
+FREERTOS.IPParameters=Tasks01,FootprintOK
+FREERTOS.Tasks01=defaultTask,0,2000,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -71,7 +70,7 @@ Mcu.Pin41=PB6
 Mcu.Pin42=PB7
 Mcu.Pin43=PB8
 Mcu.Pin44=VP_CRC_VS_CRC
-Mcu.Pin45=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin45=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin46=VP_SYS_VS_tim4
 Mcu.Pin47=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin48=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
@@ -354,7 +353,7 @@ STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0.tgfx_buffering_strategy=Partial
 STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0.tgfx_custom_height=240
 STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0.tgfx_custom_width=320
 STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0.tgfx_number_of_blocks=3
-STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0.tgfx_oswrapper=CMSIS V2
+STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0.tgfx_oswrapper=CMSIS V1
 STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0.tgfx_pixel_format=RGB565\:16
 STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0_IsPackSelfContextualization=true
 STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0_SwParameter=ApplicationCcGraphicsJjApplication\:TouchGFXOoGenerator;
@@ -372,8 +371,8 @@ USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
-VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
-VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
+VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.20.0.Mode=GraphicsJjApplication
 VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.20.0.Signal=STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.20.0
 VP_SYS_VS_tim4.Mode=TIM4
