--- a/Workspace_STM32CubeIDE/AD9833/AD9833.ioc
+++ b/Workspace_STM32CubeIDE/AD9833/AD9833.ioc
@@ -20,7 +20,8 @@ Mcu.Pin10=PC10
 Mcu.Pin11=PC11
 Mcu.Pin12=PC12
 Mcu.Pin13=PB3
-Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin14=PB6
+Mcu.Pin15=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
@@ -29,7 +30,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
-Mcu.PinsNb=15
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -84,6 +85,10 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=RST_VIN
+PB6.Locked=true
+PB6.Signal=GPIO_Output
 PC10.Mode=TX_Only_Simplex_Unidirect_Master
 PC10.Signal=SPI3_SCK
 PC11.GPIOParameters=GPIO_Label
