--- a/Workspace_STM32CubeIDE/Bode_Analyzer/Bode_Analyzer.ioc
+++ b/Workspace_STM32CubeIDE/Bode_Analyzer/Bode_Analyzer.ioc
@@ -64,8 +64,7 @@ Mcu.CPN=STM32F401RET6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=CRC
-Mcu.IP10=USB_DEVICE
-Mcu.IP11=USB_OTG_FS
+Mcu.IP10=USB_OTG_FS
 Mcu.IP2=FREERTOS
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -73,8 +72,8 @@ Mcu.IP5=SPI2
 Mcu.IP6=SYS
 Mcu.IP7=TIM1
 Mcu.IP8=TIM2
-Mcu.IP9=TIM3
-Mcu.IPNb=12
+Mcu.IP9=USB_DEVICE
+Mcu.IPNb=11
 Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -114,29 +113,27 @@ Mcu.Pin39=PC12
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin40=PB3
 Mcu.Pin41=PB6
-Mcu.Pin42=PB7
-Mcu.Pin43=PB8
+Mcu.Pin42=PB8
+Mcu.Pin43=PB9
 Mcu.Pin44=VP_CRC_VS_CRC
 Mcu.Pin45=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin46=VP_SYS_VS_tim4
 Mcu.Pin47=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin48=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin49=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin49=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 Mcu.Pin5=PC0
-Mcu.Pin50=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
-Mcu.Pin51=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.20.0
+Mcu.Pin50=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.20.0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA1
-Mcu.PinsNb=52
+Mcu.PinsNb=51
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
-NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -153,7 +150,6 @@ NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:false\:true\:true\:true\:false
 NVIC.TIM1_CC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
-NVIC.TIM3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM4_IRQn=true\:4\:0\:true\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM4_IRQn
 NVIC.TimeBaseIP=TIM4
@@ -239,19 +235,26 @@ PB2.Locked=true
 PB2.Signal=GPIO_Output
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
-PB6.GPIOParameters=GPIO_Label
+PB6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB6.GPIO_Label=RST_VIN
+PB6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB6.GPIO_PuPd=GPIO_NOPULL
+PB6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB6.Locked=true
+PB6.PinState=GPIO_PIN_SET
 PB6.Signal=GPIO_Output
-PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=RST_VOUT
-PB7.Locked=true
-PB7.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB8.GPIO_Label=TOUCH_IRQ
 PB8.GPIO_PuPd=GPIO_PULLUP
 PB8.Locked=true
 PB8.Signal=GPIO_Input
+PB9.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB9.GPIO_Label=RST_VOUT
+PB9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB9.GPIO_PuPd=GPIO_NOPULL
+PB9.Locked=true
+PB9.PinState=GPIO_PIN_SET
+PB9.Signal=GPIO_Output
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=DB0
 PC0.Locked=true
@@ -417,9 +420,6 @@ TIM1.Prescaler=8399
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=30
 TIM2.Prescaler=8399
-TIM3.IPParameters=Prescaler,Period
-TIM3.Period=10
-TIM3.Prescaler=8399
 USB_DEVICE.CLASS_NAME_FS=CUSTOM_HID
 USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode-CUSTOM_HID_FS
 USB_DEVICE.VirtualMode-CUSTOM_HID_FS=CustomHid
@@ -438,8 +438,6 @@ VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
-VP_TIM3_VS_ClockSourceINT.Mode=Internal
-VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Mode=CUSTOM_HID_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 board=NUCLEO-F401RE
