--- a/Workspace_STM32CubeIDE/AD9833/AD9833.ioc
+++ b/Workspace_STM32CubeIDE/AD9833/AD9833.ioc
@@ -16,11 +16,11 @@ Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PC10
-Mcu.Pin11=PC11
-Mcu.Pin12=PC12
-Mcu.Pin13=PB3
-Mcu.Pin14=PB6
+Mcu.Pin10=PA14
+Mcu.Pin11=PC10
+Mcu.Pin12=PC11
+Mcu.Pin13=PC12
+Mcu.Pin14=PB3
 Mcu.Pin15=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
@@ -28,8 +28,8 @@ Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA5
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
+Mcu.Pin8=PA9
+Mcu.Pin9=PA13
 Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -81,14 +81,14 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=RST_VIN
+PA9.Locked=true
+PA9.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
-PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=RST_VIN
-PB6.Locked=true
-PB6.Signal=GPIO_Output
 PC10.Mode=TX_Only_Simplex_Unidirect_Master
 PC10.Signal=SPI3_SCK
 PC11.GPIOParameters=GPIO_Label
