--- a/Workspace_STM32CubeIDE/Bode_Analyzer/Bode_Analyzer.ioc
+++ b/Workspace_STM32CubeIDE/Bode_Analyzer/Bode_Analyzer.ioc
@@ -1,55 +1,13 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.Channel-12\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.Channel-13\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.Channel-14\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.Channel-15\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,Rank-13\#ChannelRegularConversion,Channel-13\#ChannelRegularConversion,SamplingTime-13\#ChannelRegularConversion,Rank-14\#ChannelRegularConversion,Channel-14\#ChannelRegularConversion,SamplingTime-14\#ChannelRegularConversion,Rank-15\#ChannelRegularConversion,Channel-15\#ChannelRegularConversion,SamplingTime-15\#ChannelRegularConversion
-ADC1.NbrOfConversion=16
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversion
+ADC1.NbrOfConversion=2
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.Rank-1\#ChannelRegularConversion=2
-ADC1.Rank-10\#ChannelRegularConversion=11
-ADC1.Rank-11\#ChannelRegularConversion=12
-ADC1.Rank-12\#ChannelRegularConversion=13
-ADC1.Rank-13\#ChannelRegularConversion=14
-ADC1.Rank-14\#ChannelRegularConversion=15
-ADC1.Rank-15\#ChannelRegularConversion=16
-ADC1.Rank-2\#ChannelRegularConversion=3
-ADC1.Rank-3\#ChannelRegularConversion=4
-ADC1.Rank-4\#ChannelRegularConversion=5
-ADC1.Rank-5\#ChannelRegularConversion=6
-ADC1.Rank-6\#ChannelRegularConversion=7
-ADC1.Rank-7\#ChannelRegularConversion=8
-ADC1.Rank-8\#ChannelRegularConversion=9
-ADC1.Rank-9\#ChannelRegularConversion=10
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-12\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-13\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-14\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-15\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-9\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
@@ -353,7 +311,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_CRC_Init-CRC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0-false-HAL-false,11-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_CRC_Init-CRC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0-false-HAL-false,10-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0-false-HAL-false
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -413,10 +371,11 @@ STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0_IsPackSelfContextualization=true
 STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0_SwParameter=ApplicationCcGraphicsJjApplication\:TouchGFXOoGenerator;
 TIM1.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM1.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
+TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV1
 TIM1.ICFilter_CH2=15
 TIM1.ICFilter_CH3=15
-TIM1.IPParameters=Channel-Input_Capture3_from_TI3,Channel-Input_Capture2_from_TI2,ICFilter_CH2,ICFilter_CH3,Prescaler
-TIM1.Prescaler=8399
+TIM1.IPParameters=Channel-Input_Capture3_from_TI3,Channel-Input_Capture2_from_TI2,ICFilter_CH2,ICFilter_CH3,Prescaler,ClockDivision
+TIM1.Prescaler=1679
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=30
 TIM2.Prescaler=8399
