--- a/Workspace_STM32CubeIDE/AD9833/AD9833.ioc
+++ b/Workspace_STM32CubeIDE/AD9833/AD9833.ioc
@@ -8,7 +8,7 @@ Mcu.CPN=STM32F401RET6
 Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=SPI3
+Mcu.IP2=SPI2
 Mcu.IP3=SYS
 Mcu.IP4=USART2
 Mcu.IPNb=5
@@ -16,21 +16,22 @@ Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA14
-Mcu.Pin11=PC10
-Mcu.Pin12=PC11
-Mcu.Pin13=PC12
-Mcu.Pin14=PB3
-Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin10=PB10
+Mcu.Pin11=PA9
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PC11
+Mcu.Pin15=PB3
+Mcu.Pin16=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PA9
-Mcu.Pin9=PA13
-Mcu.PinsNb=16
+Mcu.Pin5=PC2
+Mcu.Pin6=PC3
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA5
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -85,18 +86,16 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=RST_VIN
 PA9.Locked=true
 PA9.Signal=GPIO_Output
+PB10.Mode=Full_Duplex_Master
+PB10.Signal=SPI2_SCK
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
-PC10.Mode=TX_Only_Simplex_Unidirect_Master
-PC10.Signal=SPI3_SCK
 PC11.GPIOParameters=GPIO_Label
-PC11.GPIO_Label=SPI3_CS
+PC11.GPIO_Label=DDS_CS
 PC11.Locked=true
 PC11.Signal=GPIO_Output
-PC12.Mode=TX_Only_Simplex_Unidirect_Master
-PC12.Signal=SPI3_MOSI
 PC13-ANTI_TAMP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
 PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -109,6 +108,10 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC2.Mode=Full_Duplex_Master
+PC2.Signal=SPI2_MISO
+PC3.Mode=Full_Duplex_Master
+PC3.Signal=SPI2_MOSI
 PH0\ -\ OSC_IN.Locked=true
 PH0\ -\ OSC_IN.Mode=HSE-External-Clock-Source
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
@@ -175,12 +178,12 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SPI3.CLKPolarity=SPI_POLARITY_HIGH
-SPI3.DataSize=SPI_DATASIZE_16BIT
-SPI3.Direction=SPI_DIRECTION_2LINES
-SPI3.IPParameters=VirtualType,Mode,Direction,CLKPolarity,DataSize
-SPI3.Mode=SPI_MODE_MASTER
-SPI3.VirtualType=VM_MASTER
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI2.CLKPolarity=SPI_POLARITY_HIGH
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CLKPolarity
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
