--- a/Workspace_STM32CubeIDE/Bode_Analyzer/Bode_Analyzer.ioc
+++ b/Workspace_STM32CubeIDE/Bode_Analyzer/Bode_Analyzer.ioc
@@ -13,8 +13,9 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK
+FREERTOS.IPParameters=Tasks01,FootprintOK,configTOTAL_HEAP_SIZE
 FREERTOS.Tasks01=defaultTask,0,2000,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configTOTAL_HEAP_SIZE=15000
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -158,9 +159,10 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=LCD_RS
 PA7.Locked=true
 PA7.Signal=GPIO_Output
-PA8.GPIOParameters=GPIO_Label
+PA8.GPIOParameters=PinState,GPIO_Label
 PA8.GPIO_Label=DDS_CS
 PA8.Locked=true
+PA8.PinState=GPIO_PIN_SET
 PA8.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=IC_VIN
@@ -173,13 +175,15 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=DB14
 PB1.Locked=true
 PB1.Signal=GPIO_Output
-PB10.GPIOParameters=GPIO_Label
+PB10.GPIOParameters=PinState,GPIO_Label
 PB10.GPIO_Label=LCD_CS
 PB10.Locked=true
+PB10.PinState=GPIO_PIN_SET
 PB10.Signal=GPIO_Output
-PB12.GPIOParameters=GPIO_Label
+PB12.GPIOParameters=PinState,GPIO_Label
 PB12.GPIO_Label=TOUCH_CS
 PB12.Locked=true
+PB12.PinState=GPIO_PIN_SET
 PB12.Signal=GPIO_Output
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
@@ -353,8 +357,11 @@ SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM1_CH3.0=TIM1_CH3,Input_Capture3_from_TI3
 SH.S_TIM1_CH3.ConfNb=1
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI2.CLKPhase=SPI_PHASE_1EDGE
+SPI2.CLKPolarity=SPI_POLARITY_HIGH
+SPI2.DataSize=SPI_DATASIZE_16BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler
+SPI2.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CLKPolarity,CLKPhase,DataSize
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0.ApplicationCcGraphicsJjApplication=TouchGFXOoGenerator
