--- a/Workspace_STM32CubeIDE/Bode_Analyzer/Bode_Analyzer.ioc
+++ b/Workspace_STM32CubeIDE/Bode_Analyzer/Bode_Analyzer.ioc
@@ -23,7 +23,6 @@ Mcu.CPN=STM32F401RET6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=CRC
-Mcu.IP10=USB_OTG_FS
 Mcu.IP2=FREERTOS
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -31,8 +30,7 @@ Mcu.IP5=SPI2
 Mcu.IP6=SYS
 Mcu.IP7=TIM1
 Mcu.IP8=TIM2
-Mcu.IP9=USB_DEVICE
-Mcu.IPNb=11
+Mcu.IPNb=9
 Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -62,31 +60,28 @@ Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin30=PA8
 Mcu.Pin31=PA9
 Mcu.Pin32=PA10
-Mcu.Pin33=PA11
-Mcu.Pin34=PA12
-Mcu.Pin35=PA13
-Mcu.Pin36=PA14
-Mcu.Pin37=PC10
-Mcu.Pin38=PC11
-Mcu.Pin39=PC12
+Mcu.Pin33=PA13
+Mcu.Pin34=PA14
+Mcu.Pin35=PC10
+Mcu.Pin36=PC11
+Mcu.Pin37=PC12
+Mcu.Pin38=PB3
+Mcu.Pin39=PB6
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin40=PB3
-Mcu.Pin41=PB6
-Mcu.Pin42=PB8
-Mcu.Pin43=PB9
-Mcu.Pin44=VP_CRC_VS_CRC
-Mcu.Pin45=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin46=VP_SYS_VS_tim4
-Mcu.Pin47=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin48=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin49=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
+Mcu.Pin40=PB8
+Mcu.Pin41=PB9
+Mcu.Pin42=VP_CRC_VS_CRC
+Mcu.Pin43=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin44=VP_SYS_VS_tim4
+Mcu.Pin45=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin46=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin47=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.20.0
 Mcu.Pin5=PC0
-Mcu.Pin50=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.20.0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA1
-Mcu.PinsNb=51
+Mcu.PinsNb=48
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -99,7 +94,6 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
-NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
@@ -107,7 +101,7 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:false\:true\:true\:true\:false
-NVIC.TIM1_CC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM1_CC_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM4_IRQn=true\:4\:0\:true\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM4_IRQn
@@ -120,10 +114,6 @@ PA1.Signal=GPIO_Output
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=IC_VOUT
 PA10.Signal=S_TIM1_CH3
-PA11.Mode=Device_Only
-PA11.Signal=USB_OTG_FS_DM
-PA12.Mode=Device_Only
-PA12.Signal=USB_OTG_FS_DP
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -328,13 +318,12 @@ RCC.FCLKCortexFreq_Value=84000000
 RCC.HCLKFreq_Value=84000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
-RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLP,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.I2SClocksFreq_Value=96000000
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLN,PLLP,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=84000000
 RCC.PLLCLKFreq_Value=84000000
-RCC.PLLM=4
-RCC.PLLN=168
+RCC.PLLN=336
 RCC.PLLP=RCC_PLLP_DIV4
 RCC.PLLQ=7
 RCC.PLLQCLKFreq_Value=48000000
@@ -342,10 +331,10 @@ RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SYSCLKFreq_VALUE=84000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.VCOI2SOutputFreq_Value=384000000
-RCC.VCOInputFreq_Value=2000000
+RCC.VCOI2SOutputFreq_Value=192000000
+RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
-RCC.VcooutputI2S=192000000
+RCC.VcooutputI2S=96000000
 SH.ADCx_IN2.0=ADC1_IN2,IN2
 SH.ADCx_IN2.ConfNb=1
 SH.ADCx_IN3.0=ADC1_IN3,IN3
@@ -379,19 +368,13 @@ STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0_SwParameter=ApplicationCcGraphicsJjApp
 TIM1.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM1.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
 TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV1
-TIM1.ICFilter_CH2=15
-TIM1.ICFilter_CH3=15
+TIM1.ICFilter_CH2=0
+TIM1.ICFilter_CH3=0
 TIM1.IPParameters=Channel-Input_Capture3_from_TI3,Channel-Input_Capture2_from_TI2,ICFilter_CH2,ICFilter_CH3,Prescaler,ClockDivision
 TIM1.Prescaler=1679
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=30
 TIM2.Prescaler=8399
-USB_DEVICE.CLASS_NAME_FS=CUSTOM_HID
-USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode-CUSTOM_HID_FS
-USB_DEVICE.VirtualMode-CUSTOM_HID_FS=CustomHid
-USB_DEVICE.VirtualModeFS=Custom_Hid_FS
-USB_OTG_FS.IPParameters=VirtualMode
-USB_OTG_FS.VirtualMode=Device_Only
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
@@ -404,8 +387,6 @@ VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
-VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Mode=CUSTOM_HID_FS
-VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 board=NUCLEO-F401RE
 boardIOC=true
 isbadioc=false
