--- a/Workspace_STM32CubeIDE/Bode_Analyzer/Bode_Analyzer.ioc
+++ b/Workspace_STM32CubeIDE/Bode_Analyzer/Bode_Analyzer.ioc
@@ -1,13 +1,16 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_2
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversion
+ADC1.ContinuousConvMode=DISABLE
+ADC1.DMAContinuousRequests=DISABLE
+ADC1.EOCSelection=ADC_EOC_SEQ_CONV
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversion,ContinuousConvMode,DMAContinuousRequests,EOCSelection
 ADC1.NbrOfConversion=2
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.Rank-1\#ChannelRegularConversion=2
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_56CYCLES
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_56CYCLES
 ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
@@ -102,7 +105,7 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:false\:true\:true\:true\:false
 NVIC.TIM1_CC_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
-NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM2_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.TIM4_IRQn=true\:4\:0\:true\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM4_IRQn
 NVIC.TimeBaseIP=TIM4
@@ -189,7 +192,7 @@ PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
 PB6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB6.GPIO_Label=RST_VIN
-PB6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PB6.GPIO_PuPd=GPIO_NOPULL
 PB6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB6.Locked=true
@@ -202,7 +205,7 @@ PB8.Locked=true
 PB8.Signal=GPIO_Input
 PB9.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB9.GPIO_Label=RST_VOUT
-PB9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PB9.GPIO_PuPd=GPIO_NOPULL
 PB9.Locked=true
 PB9.PinState=GPIO_PIN_SET
@@ -305,7 +308,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_CRC_Init-CRC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0-false-HAL-false,10-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_CRC_Init-CRC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0-false-HAL-false,9-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0-false-HAL-false
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -370,8 +373,10 @@ TIM1.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
 TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV1
 TIM1.ICFilter_CH2=0
 TIM1.ICFilter_CH3=0
-TIM1.IPParameters=Channel-Input_Capture3_from_TI3,Channel-Input_Capture2_from_TI2,ICFilter_CH2,ICFilter_CH3,Prescaler,ClockDivision
-TIM1.Prescaler=1679
+TIM1.ICPrescaler-Input_Capture2_from_TI2=TIM_ICPSC_DIV1
+TIM1.ICPrescaler-Input_Capture3_from_TI3=TIM_ICPSC_DIV1
+TIM1.IPParameters=Channel-Input_Capture3_from_TI3,Channel-Input_Capture2_from_TI2,ICFilter_CH2,ICFilter_CH3,Prescaler,ClockDivision,ICPrescaler-Input_Capture2_from_TI2,ICPrescaler-Input_Capture3_from_TI3
+TIM1.Prescaler=83
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=30
 TIM2.Prescaler=8399
